// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Button Default smoke-test 1`] = `
<button class="button button--dark button--dark-hover button--dark-focus button--dark-active disabled:bg-secondary-200 disabled:text-secondary-700 disabled:border-secondary-300 button--default">
  <span class="button__icon--start">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         fill="currentColor"
         viewbox="0 0 48 48"
    >
      <path fill-rule="evenodd"
            d="M24 6.4h3.2v12.8H40v6.4h-3.2v3.2h-3.2V32h-3.2v3.2h-3.2v3.2H24v3.2h-3.2V28.8H8v-6.4h3.2v-3.2h3.2V16h3.2v-3.2h3.2V9.6H24z"
            clip-rule="evenodd"
      >
      </path>
    </svg>
  </span>
  <span class="text-inherit fnt-clr--inverted fnt-label-default fnt-weight-medium button__label">
    click me
  </span>
</button>
`;

exports[`Components/Button Ghost smoke-test 1`] = `
<button class="button button--ghost-hover button--ghost-focus button--ghost-active button--default">
  <span class="button__icon--start">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         fill="currentColor"
         viewbox="0 0 48 48"
    >
      <path fill-rule="evenodd"
            d="M24 6.4h3.2v12.8H40v6.4h-3.2v3.2h-3.2V32h-3.2v3.2h-3.2v3.2H24v3.2h-3.2V28.8H8v-6.4h3.2v-3.2h3.2V16h3.2v-3.2h3.2V9.6H24z"
            clip-rule="evenodd"
      >
      </path>
    </svg>
  </span>
  <span class="text-inherit fnt-label-default fnt-weight-medium button__label">
    click me
  </span>
</button>
`;

exports[`Components/Button Light smoke-test 1`] = `
<button class="button button--light button--light-hover button--light-focus button--light-active button--default">
  <span class="button__icon--start">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         fill="currentColor"
         viewbox="0 0 48 48"
    >
      <path fill-rule="evenodd"
            d="M24 6.4h3.2v12.8H40v6.4h-3.2v3.2h-3.2V32h-3.2v3.2h-3.2v3.2H24v3.2h-3.2V28.8H8v-6.4h3.2v-3.2h3.2V16h3.2v-3.2h3.2V9.6H24z"
            clip-rule="evenodd"
      >
      </path>
    </svg>
  </span>
  <span class="text-inherit fnt-label-default fnt-weight-medium button__label">
    click me
  </span>
</button>
`;

exports[`Components/Button Small smoke-test 1`] = `
<button class="button button--dark button--dark-hover button--dark-focus button--dark-active disabled:bg-secondary-200 disabled:text-secondary-700 disabled:border-secondary-300 button button--small">
  <span class="button__icon--start">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         fill="currentColor"
         viewbox="0 0 48 48"
    >
      <path fill-rule="evenodd"
            d="M24 6.4h3.2v12.8H40v6.4h-3.2v3.2h-3.2V32h-3.2v3.2h-3.2v3.2H24v3.2h-3.2V28.8H8v-6.4h3.2v-3.2h3.2V16h3.2v-3.2h3.2V9.6H24z"
            clip-rule="evenodd"
      >
      </path>
    </svg>
  </span>
  <span class="text-inherit fnt-clr--inverted fnt-label-s fnt-weight-medium button__label">
    click me
  </span>
</button>
`;
